# ThighMuscleFatQuantificationMIVIC

./: README.md
C++/: CMakeLists.txt  ThighMuscleandFatQuantification.cxx
Matlab/: AnalyzeThighDataInFeatureSpace.m  AxialSliceMontage.m  BLSA_Thigh_MRI_Statistics.m  CalculateThighMuscleandAdiposeVolumes.m  Contents.m  DeformSnake2D.m  FindAxialBoundingBox.m  FindMaximumACCParameters.m  FindSquareAxialBoundingBox.m  GenerateBoneMasks.m  GenerateObjectMaskFromContourPoints.m  ImportCombinedResults_EMGMM_GAC_8_12_N_305.m  ImportThighQuantificationValidation_N_28.m  MRIThighLibSVMGridSearchTuning.m  MRIThighPatternAnalysisCaller.m  MRIThighPatternAnalysisCallerROC.m  MRIThighSetMachineLearningParameters.m  MRIThighStatisticalTests.m  MaskObjectRegionBeforeSnake.m  ProcessThighImages.m  RemoveBoneFromThighVolume.m  RemoveBoneFromThighVolume2.m  RemoveBoneFromThighVolumeBeforeSATExtraction.m  ScriptThighMuscleandFatQuantification.m  SegmentInternalSubcutaneousSurface2D.m  SegmentInternalSubcutaneousSurfaceLevelSets.m  SegmentThighInternalSATSurfaceVolume.m  SelectOneLeg.m  SeparateThighMuscleFromSAT.m  SetDataPathandFilenamesThigh.m  SetDataPathandFilenamesThighNew.m  SetDataPathandFilenamesThighPreprocessed.m  SetDataPathandFilenamesThighPreprocessedRegistered.m  SetPrinceSnakeOptionsThigh.m  SetPrinceSnakeOptionsThighParzenGVF.m  SnakeImplementation2D.m  ThighQuantification.fig  ThighQuantification.m  ThighQuantificationCL.m  ThighQuantificationParameters.fig  (+8 more)
Matlab/Archive/: GenerateBoneMasks2.m  SetDataPathandFilenames.old.m  SetDataPathandFilenames.old2.m  (+5 more)
